--- a/infrastructure/view/repository_view.xml
+++ b/infrastructure/view/repository_view.xml
@@ -38,6 +38,7 @@
                 <field name="url"/>
                 <field name="pip_packages"/>
                 <field name="is_server"/>
+                <field name="default_in_new_env"/>
                 <field name="install_server_command"
                     attrs="{'required':[('is_server','=',True)],'invisible':[('is_server','!=',True)]}"
                     />
