--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -48,7 +48,6 @@
                 <button name="sgn_to_active"
                     states="deactivated,draft,maintenance"
                     string="to Active"
-                    class="oe_highlight"
                     />
                 <button name="sgn_cancel"
                     states="active,deactivated,maintenance"
@@ -60,12 +59,11 @@
             </header>
             <sheet string="database">
                 <div class="col-md-6">
-                    <h2>
-                        <field name="server_id" class="oe_inline"/> - <field name="environment_id" class="oe_inline"/>
-                        <field name="instance_id" invisible="0"/>
-                        <field name="database_type_id" placeholder="Type..."/>
+                    <h2 class="oe_inline">
+                        <field name="server_id" class="oe_inline"/> / <field name="environment_id" class="oe_inline"/> / <field name="instance_id" class="oe_inline"/>
                     </h2>
                     <h1>
+                        <field name="database_type_id" default_focus="1" placeholder="Type..."/>
                         <field name="name" placeholder="Name..."/>
                     </h1>
                     <h2>
@@ -99,7 +97,7 @@
                                 <button name="show_passwd"
                                     string="⇒ View Password"
                                     type="object"
-                                    class="oe_link"/>
+                                    class="oe_link oe_read_only"/>
                             </div>
                         <label for="smtp_server_id"/>
                         <div class="oe_inline">
