--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -8,16 +8,18 @@
     <field name="name">infrastructure.server.select</field>
     <field name="model">infrastructure.server</field>
     <field name="arch" type="xml">
-        <search string="server" version="7.0">
-            <group string="By Attribute">
-                <field name="name" string="Name"/>
-                <field name="ip_address" string="IP Address"/>
-                <field name="holder_id" string="Holder"/>
-                <field name="owner_id" string="Owner"/>
-                <field name="user_by_id" string="Used By"/>
-            </group>
-            <group string="By object">
-                <field name="server_configuration_id" string="Server Config."/>
+        <search string="server">
+            <field name="name"/>
+            <field name="ip_address"/>
+            <field name="server_configuration_id"/>
+            <field name="holder_id"/>
+            <field name="owner_id"/>
+            <field name="used_by_id"/>
+            <group expand="0" string="Group By...">
+                <filter string="Server Configuration" context="{'group_by':'server_configuration_id'}"/>
+                <filter string="Holder" context="{'group_by':'holder_id'}"/>
+                <filter string="Owner" context="{'group_by':'owner_id'}"/>
+                <filter string="Used By" context="{'group_by':'used_by_id'}"/>
             </group>
         </search>
     </field>
@@ -28,7 +30,7 @@
     <field name="name">infrastructure.server.form</field>
     <field name="model">infrastructure.server</field>
     <field name="arch" type="xml">
-        <form string="server" version="7.0">
+        <form string="server">
             <field name="id" invisible="1"/>
             <header>
                 <button name="sgn_to_active"
@@ -71,9 +73,9 @@
                     </button>
                 </div>
                 <div class="oe_right oe_button_box" name="action_buttons">
-                    <button name="reboot_server" icon="fa-refresh" string="Reboot Server" class="oe_stat_button" help="Reboot Server" confirm="Are you sure you want to reboot the server?" state="active"/>
-                    <button name="restart_nginx" icon="fa-refresh" string="Restart Nginx" class="oe_stat_button" help="Restart Nginx" confirm="Are you sure you want to restart nxginx?" state="active"/>
-                    <button name="restart_postgres" icon="fa-refresh" string="Restart Postgres" class="oe_stat_button" help="Restart Nginx" confirm="Are you sure you want to restart postgres?" state="active"/>
+                    <button name="reboot_server" icon="fa-refresh" string="Reboot Server" class="oe_stat_button" help="Reboot Server" confirm="Are you sure you want to reboot the server?" states="active"/>
+                    <button name="restart_nginx" icon="fa-refresh" string="Restart Nginx" class="oe_stat_button" help="Restart Nginx" confirm="Are you sure you want to restart nxginx?" states="active"/>
+                    <button name="restart_postgres" icon="fa-refresh" string="Restart Postgres" class="oe_stat_button" help="Restart Nginx" confirm="Are you sure you want to restart postgres?" states="active"/>
                 </div>
                 <group>
                     <group>
@@ -98,7 +100,7 @@
                         <field name="instance_user_group"/>
                         <field name="holder_id"/>
                         <field name="owner_id"/>
-                        <field name="user_by_id"/>
+                        <field name="used_by_id"/>
                     </group>
                 </group>
                 <notebook>
@@ -180,7 +182,7 @@
             <field name="ip_address"/>
             <field name="holder_id"/>
             <field name="owner_id"/>
-            <field name="user_by_id"/>
+            <field name="used_by_id"/>
             <field name="server_configuration_id"/>
             <field name="state" />
         </tree>
